# Zadanie 5 - Frontend (serwer)/src/server/internal/storage/storage-carts.go
@@ -4,11 +4,10 @@ import (
 	"context"
 	"time"
 
-	"go.mongodb.org/mongo-driver/bson"
-	"go.mongodb.org/mongo-driver/mongo"
-
 	"Backend/internal/models/carts"
 	"Backend/internal/storage/models"
+	"go.mongodb.org/mongo-driver/bson"
+	"go.mongodb.org/mongo-driver/mongo"
 )
 
 // CreateCart ...
@@ -67,4 +66,26 @@ func (s *Session) UpdateCart(ctx context.Context, cartId string, cartUpdateDocum
 // DeleteCart ...
 func (s *Session) DeleteCart(ctx context.Context, cartId string) error {
 	return nil
+}
+
+// AddProductToCart ...
+func (s *Session) AddProductToCart(ctx context.Context, cartId string, productId string) (*carts.Cart, error) {
+	update := bson.M{"$addToSet": bson.M{"products": productId}}
+	_, updateByIDErr := s.storage.cartsCollection.UpdateByID(ctx, cartId, update)
+	if updateByIDErr != nil {
+		return nil, updateByIDErr
+	}
+
+	return s.GetCartById(ctx, cartId)
+}
+
+// RemoveProductFromCart ...
+func (s *Session) RemoveProductFromCart(ctx context.Context, cartId string, productId string) (*carts.Cart, error) {
+	update := bson.M{"$pull": bson.M{"products": productId}}
+	_, updateByIDErr := s.storage.cartsCollection.UpdateByID(ctx, cartId, update)
+	if updateByIDErr != nil {
+		return nil, updateByIDErr
+	}
+
+	return s.GetCartById(ctx, cartId)
 }
