# Zadanie 5 - Frontend (serwer)/src/server/openapi/spec/backend-openapi.yaml
@@ -312,6 +312,75 @@ paths:
           description: ''
           schema:
             $ref: '#/definitions/Error'
+  /carts/{cartId}/products/{productId}:
+    post:
+      tags:
+        - 'carts'
+      operationId: 'addProductToCart'
+      consumes:
+        - 'application/json'
+      produces:
+        - 'application/json'
+      parameters:
+        - in: path
+          name: cartId
+          type: string
+          format: uuid4
+          required: true
+          description: Cart ID
+        - in: path
+          name: productId
+          type: string
+          format: uuid4
+          required: true
+          description: Product ID
+      responses:
+        200:
+          description: ''
+          schema:
+            $ref: '#/definitions/CartResponse'
+        400:
+          description: ''
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: ''
+          schema:
+            $ref: '#/definitions/Error'
+        500:
+          description: ''
+          schema:
+            $ref: '#/definitions/Error'
+    delete:
+      tags:
+        - 'carts'
+      operationId: 'deleteProductFromCart'
+      parameters:
+        - in: path
+          name: cartId
+          type: string
+          format: uuid4
+          required: true
+          description: Cart ID
+        - in: path
+          name: productId
+          type: string
+          format: uuid4
+          required: true
+          description: Product ID
+      responses:
+        200:
+          description: ''
+          schema:
+            $ref: '#/definitions/CartResponse'
+        400:
+          description: ''
+          schema:
+            $ref: '#/definitions/Error'
+        500:
+          description: ''
+          schema:
+            $ref: '#/definitions/Error'
   /payments:
     post:
       tags:
